# bmplibtest

./: .clang-format  .gitignore  README.md  allocate.c  allocate.h  bmparray.c  bmpinspect.c  bmplibtest.sublime-project  cmdline.c  cmdline.h  cmdparser.c  cmdparser.h  conf.c  conf.h  config.h.in  defs.h  imgstack.c  imgstack.h  meson.build  meson.options  read-testdefs.c  read-testdefs.h  testdefs.txt  testparser.c  testparser.h  vartest.c
samples/: coffee-bw.ptr  coffee.ptr
